# demo-iotkit-nix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake
app/: CMakeLists.txt
app/aws-mqtt/: CMakeLists.txt
app/include/: cloud.h  fldt_implementation.h  fw_upgrade.h  gateway.h  https.h  iot_mqtt.h  message_bin.h  platform_os.h  sdmp_app.h  test_update_thread.h  tl_upgrade.h  upd_http_retrieval_thread.h
app/include/crypto/: asn1_cryptogram.h
app/include/json/: json_parser.h
app/include/platform/: platform_hardware.h  platform_os.h
app/src/: main.c  test_update_thread.c
app/src/cloud/: cloud.c  https.c
app/src/communication/mqtt/: iot_mqtt.c  message_bin.c  msg-bin-root-ca.c
app/src/communication/sdmp/: fldt_firmware.c  fldt_implementation.c  sdmp_app.c
app/src/crypto/: asn1_cryptogram.c
app/src/gateway/: gateway.c
app/src/json/: json_generator.c  json_parser.c
app/src/platform/: os.c  platform-hal.c
app/src/platform/mac/: hardware.c
app/src/platform/unix/: hardware.c
app/src/update/: fw_upgrade.c  tl_update.c  upd_http_retrieval_thread.c  update_hal.c
bootloader/: CMakeLists.txt
bootloader/src/: main.c
common/: CMakeLists.txt
common/include/hal/: rpi-global-hal.h
common/include/hal/netif/: netif-queue.h  rpi-plc-sim.h  rpi-udp-broadcast.h
common/include/hal/storage/: rpi-file-cache.h  rpi-file-io.h  rpi-storage-hal.h
common/include/helpers/: app-helpers.h  app-storage.h  event-group-bits.h  file-cache.h  file-io.h  input-params.h  msg-queue.h
common/include/sdk-impl/firmware/: firmware-nix-impl.h
common/include/sdk-impl/netif/: netif-queue.h  netif-udp-broadcast.h  rpi-udp-broadcast.h
common/include/sdk-impl/storage/: storage-nix-impl.h
common/include/threads/: event-group-bits.h
common/src/: rpi-global-hal.c
common/src/crypto/: rpi-soft-hsm-crypto-hal.c  rpi-soft-hsm-keypair-hal.c
common/src/helpers/: app-helpers.c  app-storage.c  event-group-bits.c  file-cache.c  file-io.c  input-params.c  msg-queue.c
common/src/netif/: netif-queue.c  rpi-plc-sim.c  rpi-udp-broadcast.c
common/src/private/: helpers.h
common/src/sdk-impl/device/: device-impl.c
common/src/sdk-impl/firmware/: firmware-impl.c
common/src/sdk-impl/logger/: logger-impl.c
common/src/sdk-impl/netif/: netif-queue.c  netif-udp-broadcast.c
common/src/sdk-impl/storage/: storage-nix-impl.c
common/src/storage/: rpi-file-cache.c  rpi-file-io.c  rpi-storage-hal.c  rpi-tl-hal.c
common/src/threads/: event-group-bits.c
common/src/update/: update-hal.c
ext/aws-sdk/: CMakeLists.txt
ext/aws-sdk/platform/mbedtls/: network_mbedtls_wrapper.c  network_platform.h
ext/freertos/: CMakeLists.txt  FreeRTOSConfig.h
ext/freertos/unix/: port.c  portmacro.h
ext/scripts/: generate-provision.sh  print-certificates.sh  run-device-initializer.sh
ext/scripts/helpers/provision/: common.py  generate.py  print_initializer_cmd.py
ext/scripts/helpers/provision/output/: certificates-output.txt  factory-info.json  initializer-info-output.txt  initializer-info-output.txt.bak  initializer-output.txt  initializer-output.txt.bak  trust-provisioner.conf
ext/scripts/helpers/provision/output/key_storage/db/: AuthPrivateKeys  FactoryPrivateKeys  FirmwarePrivateKeys  RecoveryPrivateKeys  TLServicePrivateKeys  TrustListPubKeys  UpperLevelKeys  (+1 more)
ext/scripts/helpers/provision/utils/: initializer.py  processes.py  trust_provisioner.py
gateway/: CMakeLists.txt
gateway/include/: event-flags.h  event_group_bit_flags.h  fldt-impl-gw.h  fldt_implementation.h  gateway.h  iot_mqtt.h  message_bin.h  msg_queue.h  sdmp_app.h  upd_http_retrieval_thread.h
gateway/include/threads/: file-download-thread.h  main-thread.h  message-bin-thread.h
gateway/src/: main.c  msg_queue.c
gateway/src/cloud/: https.c
gateway/src/communication/mqtt/: iot_mqtt.c  message_bin.c  msg-bin-root-ca.c
gateway/src/communication/sdmp/: fldt-impl-gw.c  fldt_firmware.c  fldt_implementation.c  fldt_trust_list.c  sdmp_app.c
gateway/src/gateway/: gateway.c  thing.c
gateway/src/platform/: os.c  platform-hal.c
gateway/src/threads/: file-download-thread.c  main-thread.c  message-bin-thread.c
gateway/src/update/: upd_http_retrieval_thread.c  update_hal.c
initializer/: CMakeLists.txt
initializer/include/: prvs_implementation.h
initializer/include/virgil/iot/initializer/communication/: sdmp_initializer.h
initializer/include/virgil/iot/initializer/sdmp/: prvs_implementation.h
initializer/src/: iot_pkt_api.h  iot_plc_api.h  main.c  platform-hal.c  sim_plc.c  sim_plc.h
initializer/src/communication/: sdmp_initializer.c
initializer/src/sdmp/: prvs_implementation.c
scripts/: install-virgil-crypto.sh
scripts/analyze/: cpp-check.sh  pvs-check.sh
scripts/jenkins/: Jenkinsfile-rpi-gw-tests  build-rpi-gw-tests-asan.sh  build-rpi-gw-tests.sh  build-virgil-iot-gateway-app.sh  build-virgil-iot-gateway-initializer.sh  build-virgil-iot-gateway.sh  run-rpi-gw-tests.sh
shared/: CMakeLists.txt
shared/freertos/: CMakeLists.txt  FreeRTOSConfig.h
shared/freertos/unix/: port.c
shared/include/: gateway_hal.h  gateway_macro.h  hal_helpers.h
shared/include/communication/: gateway_netif_plc.h
shared/include/hal/: file_io_hal.h  gateway_storage_hal.h
shared/include/secbox_impl/: file-system.h  file_io_hal.h  gateway_secbox_impl.h  secbox_files.h
shared/src/base64/: base64.c
shared/src/communication/: gateway_netif_plc.c  rpi_netif.c
shared/src/hal/: crypto_format_converters.h  crypto_hal.c  file_io_hal.c  gateway_hal.c  gateway_storage_hal.c  hal.c  keypair_hal.c  signature_converters.c  tl_hal.c
shared/src/hal/private/: helpers.h
shared/src/helpers/: file-system.c
shared/src/secbox_impl/: gateway_keystorage_tl.c  gateway_secbox_impl.c  secbox_files.c
tests/: CMakeLists.txt  main.c  platform-hal.c
thing/: CMakeLists.txt
thing/include/: fldt-impl-tg.h  fldt_implementation.h
thing/src/: main.c  thing.c
thing/src/communication/sdmp/: fldt-impl-tg.c  fldt_firmware.c  fldt_implementation.c  fldt_trust_list.c
thing/src/platform/: platform-hal.c
thing/src/update/: update_hal.c
(+18 files in other folders)
